test/expected/regression-net-connect.txt
warning: you are using async-hook which is unstable.
/scripts/regression-net-connect.js:12
  throw error;
  ^

Error: connect ECONNREFUSED 127.0.0.1:24075
    at Object.exports._errnoException (util.js:1022:11)
    at exports._exceptionWithHostPort (util.js:1045:20)
    at TCPConnectWrap.afterConnect [as oncomplete] (net.js:1090:14)
    at fireErrorCallbacks (net.js:473:15)
    at Socket._destroy (net.js:512:3)
    at TCPConnectWrap.afterConnect [as oncomplete] (net.js:1099:10)
    at connect (net.js:865:26)
    at emitLookup (net.js:1013:7)
    at GetAddrInfoReqWrap.asyncCallback [as callback] (dns.js:62:16)
    at GetAddrInfoReqWrap.onlookup [as oncomplete] (dns.js:81:10)
    at lookup (dns.js:164:19)
    at lookupAndConnect (net.js:994:3)
    at Socket.connect (net.js:939:5)
    at Object.exports.connect.exports.createConnection (net.js:74:35)
    at Object.<anonymous> (/scripts/regression-net-connect.js:10:20)
    at Module._compile (module.js:571:32)
    at Object.Module._extensions..js (module.js:580:10)
    at Module.load (module.js:488:32)
    at tryModuleLoad (module.js:447:12)
    at Function.Module._load (module.js:439:3)
    at Module.runMain (module.js:605:10)
    at run (bootstrap_node.js:420:7)
    at startup (bootstrap_node.js:139:9)
    at bootstrap_node.js:535:3
